--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   server1:
     build: 
       context: .
-      dockerfile: Dockerfile-nodejs
+      dockerfile: Dockerfile
     ports:
       - "3001:3001"
     command: ["node", "app.js", "3001"]
@@ -16,7 +16,7 @@ services:
   server2:
     build: 
       context: .
-      dockerfile: Dockerfile-nodejs
+      dockerfile: Dockerfile
     ports:
       - "3002:3002"
     command: ["node", "app.js", "3002"]
@@ -27,7 +27,7 @@ services:
   server3:
     build: 
       context: .
-      dockerfile: Dockerfile-nodejs
+      dockerfile: Dockerfile
     ports:
       - "3003:3003"
     command: ["node", "app.js", "3003"]
