--- a/src/package.json
+++ b/src/package.json
@@ -1,15 +1,20 @@
 {
-    "name": "project",
-    "version": "1.0.0",
-    "description": "Project",
-    "main": "app.js",
-    "scripts": {
-      "start": "node app.js"
-    },
-    "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "etcd3": "1.1.2"
-    }
-  }
-  
+  "name": "project",
+  "version": "1.0.0",
+  "description": "Project",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "etcd3": "1.1.2",
+    "ejs": "^3.1.6",
+    "connect-flash": "^0.1.1",
+    "express-session": "^1.17.2"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
+}
