TickETCD: new local dev

--- a/src/docker-compose-dev.yml
+++ b/src/docker-compose-dev.yml
@@ -2,33 +2,6 @@ version: '3'
 
 services:
 
-  server1:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3001:3001"
-    command: ["node", "app.js", "3001"]
-    container_name: server1
-  
-  server2:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3002:3002"
-    command: ["node", "app.js", "3002"]
-    container_name: server2
-
-  server3:
-    build: 
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "3003:3003"
-    command: ["node", "app.js", "3003"]
-    container_name: server3
-
   etcd1:
     image: quay.io/coreos/etcd
     command: [
@@ -37,8 +10,8 @@ services:
       "--data-dir", "/etcd-data",
       "--initial-advertise-peer-urls", "http://etcd1:2380", 
       "--listen-peer-urls", "http://0.0.0.0:2380", 
-      "--listen-client-urls", "http://0.0.0.0:2379", 
-      "--advertise-client-urls", "http://etcd1:2379", 
+      "--listen-client-urls", "http://0.0.0.0:2381", 
+      "--advertise-client-urls", "http://etcd1:2381", 
       "--initial-cluster-token", "etcd-cluster", 
       "--initial-cluster", "node1=http://etcd1:2380,node2=http://etcd2:2380,node3=http://etcd3:2380,node4=http://etcd4:2380,node5=http://etcd5:2380", 
       "--initial-cluster-state", "new"
@@ -46,6 +19,8 @@ services:
     container_name: etcd1
     volumes: 
           - ./db/etcd1:/etcd-data
+    ports:
+      - '2381:2381'
 
   etcd2:
     image: quay.io/coreos/etcd
@@ -55,8 +30,8 @@ services:
       "--data-dir", "/etcd-data",
       "--initial-advertise-peer-urls", "http://etcd2:2380", 
       "--listen-peer-urls", "http://0.0.0.0:2380", 
-      "--listen-client-urls", "http://0.0.0.0:2379", 
-      "--advertise-client-urls", "http://etcd2:2379",
+      "--listen-client-urls", "http://127.0.0.1:2382", 
+      "--advertise-client-urls", "http://127.0.0.1:2382",
       "--initial-cluster-token", "etcd-cluster", 
       "--initial-cluster", "node1=http://etcd1:2380,node2=http://etcd2:2380,node3=http://etcd3:2380,node4=http://etcd4:2380,node5=http://etcd5:2380", 
       "--initial-cluster-state", "new"
@@ -64,7 +39,9 @@ services:
     container_name: etcd2
     volumes: 
           - ./db/etcd2:/etcd-data
-
+    ports:
+      - '2382:2382'
+  
   etcd3:
     image: quay.io/coreos/etcd
     command: [
@@ -73,8 +50,8 @@ services:
       "--data-dir", "/etcd-data",
       "--initial-advertise-peer-urls", "http://etcd3:2380", 
       "--listen-peer-urls", "http://0.0.0.0:2380", 
-      "--listen-client-urls", "http://0.0.0.0:2379", 
-      "--advertise-client-urls", "http://etcd3:2379", 
+      "--listen-client-urls", "http://127.0.0.1:2383", 
+      "--advertise-client-urls", "http://127.0.0.1:2383", 
       "--initial-cluster-token", "etcd-cluster", 
       "--initial-cluster", "node1=http://etcd1:2380,node2=http://etcd2:2380,node3=http://etcd3:2380,node4=http://etcd4:2380,node5=http://etcd5:2380", 
       "--initial-cluster-state", "new"
@@ -82,6 +59,8 @@ services:
     container_name: etcd3
     volumes: 
           - ./db/etcd3:/etcd-data
+    ports:
+      - '2383:2383'
   
   etcd4:
     image: quay.io/coreos/etcd
@@ -91,8 +70,8 @@ services:
       "--data-dir", "/etcd-data",
       "--initial-advertise-peer-urls", "http://etcd4:2380", 
       "--listen-peer-urls", "http://0.0.0.0:2380", 
-      "--listen-client-urls", "http://0.0.0.0:2379", 
-      "--advertise-client-urls", "http://etcd4:2379", 
+      "--listen-client-urls", "http://127.0.0.1:2384", 
+      "--advertise-client-urls", "http://127.0.0.1:2384", 
       "--initial-cluster-token", "etcd-cluster", 
       "--initial-cluster", "node1=http://etcd1:2380,node2=http://etcd2:2380,node3=http://etcd3:2380,node4=http://etcd4:2380,node5=http://etcd5:2380", 
       "--initial-cluster-state", "new"
@@ -100,6 +79,8 @@ services:
     container_name: etcd4
     volumes: 
           - ./db/etcd4:/etcd-data
+    ports:
+      - '2384:2384'
   
   etcd5:
     image: quay.io/coreos/etcd
@@ -109,8 +90,8 @@ services:
       "--data-dir", "/etcd-data",
       "--initial-advertise-peer-urls", "http://etcd5:2380", 
       "--listen-peer-urls", "http://0.0.0.0:2380", 
-      "--listen-client-urls", "http://0.0.0.0:2379", 
-      "--advertise-client-urls", "http://etcd5:2379", 
+      "--listen-client-urls", "http://127.0.0.1:2385", 
+      "--advertise-client-urls", "http://127.0.0.1:2385", 
       "--initial-cluster-token", "etcd-cluster", 
       "--initial-cluster", "node1=http://etcd1:2380,node2=http://etcd2:2380,node3=http://etcd3:2380,node4=http://etcd4:2380,node5=http://etcd5:2380", 
       "--initial-cluster-state", "new"
@@ -118,3 +99,5 @@ services:
     container_name: etcd5
     volumes: 
           - ./db/etcd5:/etcd-data
+    ports:
+      - '2385:2385'
