--- a/src/data/configurations.json
+++ b/src/data/configurations.json
@@ -9,27 +9,28 @@
     "NOTIFICATION_PROBABILITY": 0.3,
     "EVENT_SEARCH_FIELDS": ["name", "description", "location"],
     "EVENT_LOCATIONS": [
-      "Aveiro",
-      "Beja",
-      "Braga",
-      "Bragança",
-      "Castelo Branco",
-      "Coimbra",
-      "Évora",
-      "Faro",
-      "Guarda",
-      "Leiria",
-      "Lisboa",
-      "Portalegre",
-      "Porto",
-      "Santarém",
-      "Setúbal",
-      "Viana do Castelo",
-      "Vila Real",
-      "Viseu",
-      "Açores",
-      "Madeira"
+      "London",
+      "Manchester",
+      "Liverpool",
+      "Birmingham",
+      "Glasgow",
+      "Leeds",
+      "Sheffield",
+      "Newcastle",
+      "Bristol",
+      "Cardiff",
+      "Edinburgh",
+      "Belfast",
+      "Southampton",
+      "Nottingham",
+      "Brighton",
+      "Leicester",
+      "Portsmouth",
+      "York",
+      "Oxford",
+      "Cambridge"
     ],
+
     "EVENT_TYPES": ["concert", "theater", "dance", "magic", "circus"],
     "TICKET_TYPES": {
       "pink": {"minPrice": 100, "maxPrice": 200, "minQuantity": 10, "maxQuantity": 100},
