--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "etcd3": "1.1.2",
     "express": "^4.18.2",
     "express-session": "^1.17.2",
+    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1"
   },
   "keywords": [],
