--- a/src/package.json
+++ b/src/package.json
@@ -13,10 +13,12 @@
     "etcd3": "1.1.2",
     "express": "^4.18.2",
     "express-session": "^1.17.2",
-    "tailwindcss": "^3.4.3",
     "uuid": "^9.0.1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
+  }
 }
